experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/CopyArray.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:17: error: ';' expected
        /*@ loop invariant iBegin <= k && k <= iEnd;
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:17: error: not a statement
        /*@ loop invariant iBegin <= k && k <= iEnd;
                                       ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:17: error: Expected a declaration or a JML construct inside the JML annotation here
        /*@ loop invariant iBegin <= k && k <= iEnd;
                           ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:18: error: ';' expected
          @ loop invariant (\forall int j; iBegin <= j && j < k; a[j] == b[j]);
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:18: error: not a statement
          @ loop invariant (\forall int j; iBegin <= j && j < k; a[j] == b[j]);
                                                       ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:18: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int j; iBegin <= j && j < k; a[j] == b[j]);
                                           ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:18: error: not a statement
          @ loop invariant (\forall int j; iBegin <= j && j < k; a[j] == b[j]);
                                                                      ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:18: error: ';' expected
          @ loop invariant (\forall int j; iBegin <= j && j < k; a[j] == b[j]);
                                                                             ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:18: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int j; iBegin <= j && j < k; a[j] == b[j]);
                                                                 ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:19: error: ';' expected
          @ loop invariant (\forall int j; 0 <= j && j < iBegin; a[j] == \old(a[j]));
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:19: error: not a statement
          @ loop invariant (\forall int j; 0 <= j && j < iBegin; a[j] == \old(a[j]));
                                                  ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:19: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int j; 0 <= j && j < iBegin; a[j] == \old(a[j]));
                                           ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:19: error: not a statement
          @ loop invariant (\forall int j; 0 <= j && j < iBegin; a[j] == \old(a[j]));
                                                                      ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:19: error: ';' expected
          @ loop invariant (\forall int j; 0 <= j && j < iBegin; a[j] == \old(a[j]));
                                                                                   ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:19: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int j; 0 <= j && j < iBegin; a[j] == \old(a[j]));
                                                                 ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:20: error: ';' expected
          @ loop invariant (\forall int j; iEnd <= j && j < a.length; a[j] == \old(a[j]));
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:20: error: not a statement
          @ loop invariant (\forall int j; iEnd <= j && j < a.length; a[j] == \old(a[j]));
                                                     ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:20: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int j; iEnd <= j && j < a.length; a[j] == \old(a[j]));
                                           ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:20: error: not a statement
          @ loop invariant (\forall int j; iEnd <= j && j < a.length; a[j] == \old(a[j]));
                                                                           ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:20: error: ';' expected
          @ loop invariant (\forall int j; iEnd <= j && j < a.length; a[j] == \old(a[j]));
                                                                                        ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/CopyArray/CopyArray.java:20: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int j; iEnd <= j && j < a.length; a[j] == \old(a[j]));
                                                                      ^
21 errors
1 warning
